--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -5,9 +5,7 @@
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-
-      https://www.apache.org/licenses/LICENSE-2.0
-
+https://www.apache.org/licenses/LICENSE-2.0 
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -258,8 +256,7 @@
 			    <div class="mdc-toolbar__section mdc-toolbar__section--align-end">
 			      <nav id="toolbar-tabs-primary-indicator" class="mdc-tabs mdc-tabs--indicator-primary">
 			        <a class="mdc-tab mdc-tab--active" href="#one">Item One</a>
-			        <a class="mdc-tab" href="#two">Item Two</a>
-			        <a class="mdc-tab" href="#three">Item Three</a>
+			        <a class="mdc-tab" href="#two">Item Two</a> <a class="mdc-tab" href="#three">Item Three</a>
 			        <span class="mdc-tabs__indicator"></span>
 			      </nav>
 			    </div>
@@ -287,7 +284,7 @@
 			  <h2>Within mdc-toolbar + accent indicator</h2>
 			  <div class="mdc-toolbar">
 			    <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
-			      <h1 class="mdc-typography--title">My App</h2>
+			      <h2 class="mdc-typography--title">My App</h2>
 			    </div>
 			    <div class="mdc-toolbar__section mdc-toolbar__section--align-end">
 			      <nav id="toolbar-tabs-accent-indicator" class="mdc-tabs mdc-tabs--indicator-accent">
@@ -304,7 +301,7 @@
 			  <h2>Within mdc-toolbar + accent indicator, CSS-Only</h2>
 			  <div class="mdc-toolbar">
 			    <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
-			      <h1 class="mdc-typography--title">My App</h2>
+			      <h2 class="mdc-typography--title">My App</h2>
 			    </div>
 			    <div class="mdc-toolbar__section mdc-toolbar__section--align-end">
 			      <nav class="mdc-tabs mdc-tabs--indicator-accent">
@@ -316,45 +313,45 @@
 			    </div>
 			  </div>
 			</section>
-			
-			<section>
-			  <h2>Within Toolbar, Dynamic Content Control</h2>
-			  <em>This uses custom CSS to line up the title and tabs. 
-			      Should it be rolled into toolbar/tabs/both?</em>
-			  <div class="mdc-toolbar FUTURE-mdc-toolbar" id="dynamic-demo-toolbar">
-			    <div class="mdc-toolbar__row">
-			      <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
-			        <h1 class="mdc-typography--display2">My App</h2>
-			      </div>
-			    </div>
-			    <div class="mdc-toolbar__row">
-			      <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
-			        <nav id="dynamic-tabs" class="mdc-tabs mdc-tabs--indicator-accent" role="tablist">
-			          <a role="tab" aria-controls="panel-1" 
-			             class="mdc-tabmdc-tab--active" href="#">Item One</a>
-			          <a role="tab" aria-controls="panel-2"
-			             class="mdc-tab" href="#">Item Two</a>
-			          <a role="tab" aria-controls="panel-3" 
-			             class="mdc-tab" href="#">Item Three</a>
-			          <span class="mdc-tabs__indicator"></span>
-			        </nav>
-			      </div>
-			    </div>
-			  </div>
-			  <section>
-			    <div class="panels">
-			      <p class="panel active" id="panel-1">Item One</p>
-			      <p class="panel" id="panel-2">Item Two</p>
-			      <p class="panel" id="panel-3">Item Three</p>
-			    </div>
-			    <div class="dots">
-			      <a class="dot active" data-trigger="panel-1" href="#"></a>
-			      <a class="dot" data-trigger="panel-2" href="#"></a>
-			      <a class="dot" data-trigger="panel-3" href="#"></a>
-			    </div>
-			  </section>
-			</section>
-			<!-- TODO: Outline color states and then Eng Outline!! -->
+		
+      <section>
+        <h2>Within Toolbar, Dynamic Content Control</h2>
+        <em>This uses custom CSS to line up the title and tabs. 
+            Should it be rolled into toolbar/tabs/both?</em>
+        <div class="mdc-toolbar FUTURE-mdc-toolbar" id="dynamic-demo-toolbar">
+          <div class="mdc-toolbar__row">
+            <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
+              <h2 class="mdc-typography--display2">My App</h2>
+            </div>
+          </div>
+          <div class="mdc-toolbar__row">
+            <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
+              <nav id="dynamic-tabs" class="mdc-tabs mdc-tabs--indicator-accent" role="tablist">
+                <a role="tab" aria-controls="panel-1" 
+                   class="mdc-tab mdc-ripple-surface mdc-tab--active" href="#">Item One</a>
+                <a role="tab" aria-controls="panel-2"
+                   class="mdc-tab mdc-ripple-surface" href="#">Item Two</a>
+                <a role="tab" aria-controls="panel-3" 
+                   class="mdc-tab mdc-ripple-surface" href="#">Item Three</a>
+                <span class="mdc-tabs__indicator"></span>
+              </nav>
+            </div>
+          </div>
+        </div>
+        <section>
+          <div class="panels">
+            <p class="panel active" id="panel-1">Item One</p>
+            <p class="panel" id="panel-2">Item Two</p>
+            <p class="panel" id="panel-3">Item Three</p>
+          </div>
+          <div class="dots">
+            <a class="dot active" data-trigger="panel-1" href="#"></a>
+            <a class="dot" data-trigger="panel-2" href="#"></a>
+            <a class="dot" data-trigger="panel-3" href="#"></a>
+          </div>
+        </section>
+      </section>
+      <!-- TODO: Outline color states and then Eng Outline!! -->
   	</div>
 
     <script src="assets/material-components-web.js" charset="utf-8"></script>
