--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -5,7 +5,7 @@
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-https://www.apache.org/licenses/LICENSE-2.0 
+https://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -34,7 +34,7 @@ https://www.apache.org/licenses/LICENSE-2.0
       .mdc-theme--dark {
         background-color: #303030;
       }
- 
+
       #dynamic-demo-toolbar h1 {
         margin-left: 64px;
 
@@ -47,13 +47,13 @@ https://www.apache.org/licenses/LICENSE-2.0
       }
     </style>
   </head>
-  <body class="mdc-typography"> 
+  <body class="mdc-typography">
     <div class="demo-body">
 
 			<h1>Tabs</h1>
-			
+
 			<!-- TODO: Consider RTL, Dark Theme -->
-			
+
 			<section>
 			  <h2>Basic tabs</h2>
 			  <nav id="basic-tabs" class="mdc-tabs">
@@ -64,7 +64,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>CSS-Only Tabs</h2>
 			  <nav class="mdc-tabs">
@@ -74,13 +74,13 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>Scrollable tabs</h2>
 			  <div id="tabs-scroller" class="mdc-tabs-scroller" data-md-autoinit>
 			    <div class="mdc-tabs-scroller__indicator mdc-tabs-scroller__indicator--left">
-			      <a class="mdc-tabs-scroller__indicator__inner material-icons" href="#">
-			        keyboard_arrow_left
+			      <a class="mdc-tabs-scroller__indicator__inner" href="#">
+			        LEFT
 			      </a>
 			    </div>
 			    <div class="mdc-tabs-scroller__scroll-frame">
@@ -105,13 +105,13 @@ https://www.apache.org/licenses/LICENSE-2.0
 			      </nav>
 			    </div>
 			    <div class="mdc-tabs-scroller__indicator mdc-tabs-scroller__indicator--right">
-			      <a class="mdc-tabs-scroller__indicator__inner material-icons" href="#">
-			        keyboard_arrow_right
+			      <a class="mdc-tabs-scroller__indicator__inner" href="#">
+			        RIGHT
 			      </a>
 			    </div>
 			  </div>
 			</section>
-			
+
 			<section>
 			  <h2>Icon tabs</h2>
 			  <nav id="icon-tabs" class="mdc-tabs mdc-tabs--icon-tabs">
@@ -127,7 +127,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>CSS-Only Icon tabs</h2>
 			  <nav class="mdc-tabs mdc-tabs--icon-tabs">
@@ -143,7 +143,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>Icons with text</h2>
 			  <nav id="icon-text-tabs" class="mdc-tabs mdc-tabs--icons-with-text">
@@ -162,7 +162,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>CSS-Only Icons with text</h2>
 			  <nav id="icon-text-tabs" class="mdc-tabs mdc-tabs--icons-with-text">
@@ -181,7 +181,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<!-- TODO: Primary/Accent Indicator, Primary/Accent Indicator CSS-Only -->
 			<section>
 			  <h2>Primary Color Indicator</h2>
@@ -192,7 +192,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>Primary Color Indicator - CSS-Only</h2>
 			  <nav class="mdc-tabs mdc-tabs--indicator-primary">
@@ -202,7 +202,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>Accent Color Indicator</h2>
 			  <nav id="accent-indicator-tabs" class="mdc-tabs mdc-tabs--indicator-accent">
@@ -212,7 +212,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>Accent Color Indicator - CSS-Only</h2>
 			  <nav class="mdc-tabs mdc-tabs--indicator-accent">
@@ -222,7 +222,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <span class="mdc-tabs__indicator"></span>
 			  </nav>
 			</section>
-			
+
 			<section>
 			  <h2>Within mdc-toolbar</h2>
 			  <div class="mdc-toolbar">
@@ -239,7 +239,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    </div>
 			  </div>
 			</section>
-			
+
 			<section>
 			  <h2>Within mdc-toolbar, CSS-Only</h2>
 			  <div class="mdc-toolbar">
@@ -256,7 +256,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    </div>
 			  </div>
 			</section>
-			
+
 			<section>
 			  <h2>Within mdc-toolbar + primary indicator</h2>
 			  <em>Note: Changing the toolbar's background color here so that the primary indicator can be visible</em>
@@ -273,7 +273,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    </div>
 			  </div>
 			</section>
-			
+
 			<section>
 			  <h2>Within mdc-toolbar + primary indicator, CSS-Only</h2>
 			  <div class="mdc-toolbar mdc-theme--accent-bg">
@@ -290,7 +290,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    </div>
 			  </div>
 			</section>
-			
+
 			<section>
 			  <h2>Within mdc-toolbar + accent indicator</h2>
 			  <div class="mdc-toolbar">
@@ -307,7 +307,7 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    </div>
 			  </div>
 			</section>
-			
+
 			<section>
 			  <h2>Within mdc-toolbar + accent indicator, CSS-Only</h2>
 			  <div class="mdc-toolbar">
@@ -324,10 +324,10 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    </div>
 			  </div>
 			</section>
-		
+
       <section>
         <h2>Within Toolbar, Dynamic Content Control</h2>
-        <em>This uses custom CSS to line up the title and tabs. 
+        <em>This uses custom CSS to line up the title and tabs.
             Should it be rolled into toolbar/tabs/both?</em>
         <div class="mdc-toolbar" id="dynamic-demo-toolbar">
           <div class="mdc-toolbar__row">
@@ -338,11 +338,11 @@ https://www.apache.org/licenses/LICENSE-2.0
           <div class="mdc-toolbar__row">
             <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
               <nav id="dynamic-tabs" class="mdc-tabs mdc-tabs--indicator-accent" role="tablist">
-                <a role="tab" aria-controls="panel-1" 
+                <a role="tab" aria-controls="panel-1"
                    class="mdc-tab mdc-ripple-surface mdc-tab--active" href="#">Item One</a>
                 <a role="tab" aria-controls="panel-2"
                    class="mdc-tab mdc-ripple-surface" href="#">Item Two</a>
-                <a role="tab" aria-controls="panel-3" 
+                <a role="tab" aria-controls="panel-3"
                    class="mdc-tab mdc-ripple-surface" href="#">Item Three</a>
                 <span class="mdc-tabs__indicator"></span>
               </nav>
@@ -409,7 +409,7 @@ https://www.apache.org/licenses/LICENSE-2.0
           if (!evt.target.classList.contains('dot')) {
             return;
           }
-          
+
           evt.preventDefault();
           var dotIndex = [].slice.call(dots.querySelectorAll('.dot')).indexOf(evt.target);
           if (dotIndex >= 0) {
