--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -86,21 +86,14 @@ https://www.apache.org/licenses/LICENSE-2.0
 			    <div class="mdc-tabs-scroller__scroll-frame">
 			      <nav id="scrollable-tabs" class="mdc-tabs mdc-tabs-scroller__scroll-frame__tabs">
 			        <a class="mdc-tab mdc-tab--active" href="#one">Item One</a>
-			        <a class="mdc-tab" href="#two">New Arrivals in Item Two</a>
+			        <a class="mdc-tab" href="#two">Item Two</a>
 			        <a class="mdc-tab" href="#three">Item Three</a>
 			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#four">Item Four</a>
-			        <a class="mdc-tab" href="#five">Item Five</a>
-			        <a class="mdc-tab" href="#six">Item Six</a>
-			        <a class="mdc-tab" href="#seven">Item Seven</a>
-			        <a class="mdc-tab" href="#eight">Item Eight</a>
+              <a class="mdc-tab" href="#five">Item Five</a>
+              <a class="mdc-tab" href="#six">Item Six</a>
+              <a class="mdc-tab" href="#seven">Item Seven</a>
+              <a class="mdc-tab" href="#eight">Item Eight</a>
+              <a class="mdc-tab" href="#nine">Item Nine</a>
 			        <span class="mdc-tabs__indicator"></span>
 			      </nav>
 			    </div>
@@ -370,7 +363,7 @@ https://www.apache.org/licenses/LICENSE-2.0
       (function() {
         window.basicTabs = new mdc.tabs.MDCTabs(document.querySelector('#basic-tabs'));
         window.scrollableTabs = new mdc.tabs.MDCTabs(document.querySelector('#scrollable-tabs'));
-        window.tabsScroller = new mdc.tabs.MDCTabsScroller(document.querySelector('#tabs-scroller', window.scrollableTabs));
+        window.tabsScroller = new mdc.tabs.MDCTabsScroller(window.scrollableTabs);
         window.iconTabs = new mdc.tabs.MDCTabs(document.querySelector('#icon-tabs'));
         window.iconTextTabs = new mdc.tabs.MDCTabs(document.querySelector('#icon-text-tabs'));
         window.toolbarTabs = new mdc.tabs.MDCTabs(document.querySelector('#toolbar-tabs'));
