--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -75,12 +75,12 @@ https://www.apache.org/licenses/LICENSE-2.0
 			  </nav>
 			</section>
 
-			<section>
+			<section dir="rtl">
 			  <h2>Scrollable tabs</h2>
 			  <div id="tabs-scroller" class="mdc-tabs-scroller" data-md-autoinit>
 			    <div class="mdc-tabs-scroller__indicator mdc-tabs-scroller__indicator--left">
-			      <a class="mdc-tabs-scroller__indicator__inner" href="#">
-			        LEFT
+			      <a class="mdc-tabs-scroller__indicator__inner material-icons" href="#" aria-label="scroll back button">
+			        keyboard_left_arrow
 			      </a>
 			    </div>
 			    <div class="mdc-tabs-scroller__scroll-frame">
@@ -98,8 +98,8 @@ https://www.apache.org/licenses/LICENSE-2.0
 			      </nav>
 			    </div>
 			    <div class="mdc-tabs-scroller__indicator mdc-tabs-scroller__indicator--right">
-			      <a class="mdc-tabs-scroller__indicator__inner" href="#">
-			        RIGHT
+			      <a class="mdc-tabs-scroller__indicator__inner material-icons" href="#" aria-label="scroll forward button">
+			        keyboard_right_arrow
 			      </a>
 			    </div>
 			  </div>
@@ -320,23 +320,16 @@ https://www.apache.org/licenses/LICENSE-2.0
 
       <section>
         <h2>Within Toolbar, Dynamic Content Control</h2>
-        <em>This uses custom CSS to line up the title and tabs.
-            Should it be rolled into toolbar/tabs/both?</em>
         <div class="mdc-toolbar" id="dynamic-demo-toolbar">
-          <div class="mdc-toolbar__row">
-            <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
-              <h2 class="mdc-typography--display2">My App</h2>
-            </div>
-          </div>
           <div class="mdc-toolbar__row">
             <div class="mdc-toolbar__section mdc-toolbar__section--align-start">
               <nav id="dynamic-tabs" class="mdc-tabs mdc-tabs--indicator-accent" role="tablist">
                 <a role="tab" aria-controls="panel-1"
-                   class="mdc-tab mdc-ripple-surface mdc-tab--active" href="#">Item One</a>
+                   class="mdc-tab mdc-ripple-surface mdc-tab--active" href="#panel-1">Item One</a>
                 <a role="tab" aria-controls="panel-2"
-                   class="mdc-tab mdc-ripple-surface" href="#">Item Two</a>
+                   class="mdc-tab mdc-ripple-surface" href="#panel-2">Item Two</a>
                 <a role="tab" aria-controls="panel-3"
-                   class="mdc-tab mdc-ripple-surface" href="#">Item Three</a>
+                   class="mdc-tab mdc-ripple-surface" href="#panel-3">Item Three</a>
                 <span class="mdc-tabs__indicator"></span>
               </nav>
             </div>
@@ -344,18 +337,17 @@ https://www.apache.org/licenses/LICENSE-2.0
         </div>
         <section>
           <div class="panels">
-            <p class="panel active" id="panel-1">Item One</p>
-            <p class="panel" id="panel-2">Item Two</p>
-            <p class="panel" id="panel-3">Item Three</p>
+            <p class="panel active" id="panel-1" role="tabpanel" aria-hidden="false">Item One</p>
+            <p class="panel" id="panel-2" role="tabpanel" aria-hidden="true">Item Two</p>
+            <p class="panel" id="panel-3" role="tabpanel" aria-hidden="true">Item Three</p>
           </div>
           <div class="dots">
-            <a class="dot active" data-trigger="panel-1" href="#"></a>
-            <a class="dot" data-trigger="panel-2" href="#"></a>
-            <a class="dot" data-trigger="panel-3" href="#"></a>
+            <a class="dot active" data-trigger="panel-1" href="#panel-1"></a>
+            <a class="dot" data-trigger="panel-2" href="#panel-2"></a>
+            <a class="dot" data-trigger="panel-3" href="#panel-3"></a>
           </div>
         </section>
       </section>
-      <!-- TODO: Outline color states and then Eng Outline!! -->
   	</div>
 
     <script src="assets/material-components-web.js" charset="utf-8"></script>
@@ -377,25 +369,34 @@ https://www.apache.org/licenses/LICENSE-2.0
         var panels = document.querySelector('.panels');
 
         dynamicTabs.preventDefaultOnClick = true;
-        dynamicTabs.root_.addEventListener('MDCTabs:change', function ({detail: tabs}) {
-          var nthChildIndex = tabs.activeTabIndex + 1;
+
+        function updateDot(index) {
           var activeDot = dots.querySelector('.dot.active');
           if (activeDot) {
             activeDot.classList.remove('active');
           }
-          var newActiveDot = dots.querySelector('.dot:nth-child(' + nthChildIndex + ')');
+          var newActiveDot = dots.querySelector('.dot:nth-child(' + (index + 1) + ')');
           if (newActiveDot) {
             newActiveDot.classList.add('active');
           }
+        }
 
+        function updatePanel(index) {
           var activePanel = panels.querySelector('.panel.active');
           if (activePanel) {
             activePanel.classList.remove('active');
           }
-          var newActivePanel = panels.querySelector('.panel:nth-child(' + nthChildIndex + ')');
+          var newActivePanel = panels.querySelector('.panel:nth-child(' + (index + 1) + ')');
           if (newActivePanel) {
             newActivePanel.classList.add('active');
           }
+        }
+
+        dynamicTabs.root_.addEventListener('MDCTabs:change', function ({detail: tabs}) {
+          var nthChildIndex = tabs.activeTabIndex;
+
+          updatePanel(nthChildIndex);
+          updateDot(nthChildIndex);
         });
 
         dots.addEventListener('click', function (evt) {
@@ -404,10 +405,14 @@ https://www.apache.org/licenses/LICENSE-2.0
           }
 
           evt.preventDefault();
+
           var dotIndex = [].slice.call(dots.querySelectorAll('.dot')).indexOf(evt.target);
+
           if (dotIndex >= 0) {
-            dynamicTabs.foundation_.switchToTabAtIndex(dotIndex)
+            dynamicTabs.foundation_.switchToTabAtIndex(dotIndex, false);
           }
+          updatePanel(dotIndex);
+          updateDot(dotIndex);
         })
       })();
     </script>
