--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -98,8 +98,8 @@ https://www.apache.org/licenses/LICENSE-2.0
     <div class="demo-body">
 
 			<h1>Tabs</h1>
-      <button type="button" class="mdc-button mdc-button--primary toggle-rtl" onclick="this.parentElement.hasAttribute('dir') ? this.parentElement.removeAttribute('dir') : this.parentElement.setAttribute('dir', 'rtl');">Toggle RTL</button>
-			<!-- TODO: Consider RTL, Dark Theme -->
+      <button type="button" class="mdc-button mdc-button--primary" id="toggle-rtl">Toggle RTL</button>
+      <button type="button" class="mdc-button mdc-button--primary" id="toggle-dark-theme">Toggle Dark Theme</button>
 
 			<section>
 			  <h2>Basic tabs</h2>
@@ -461,6 +461,16 @@ https://www.apache.org/licenses/LICENSE-2.0
           updatePanel(dotIndex);
           updateDot(dotIndex);
         })
+      })();
+    </script>
+    <script>
+      (function() {
+        document.getElementById('toggle-rtl').addEventListener('click', function(evt) {
+          evt.target.parentElement.hasAttribute('dir') ? evt.target.parentElement.removeAttribute('dir') : evt.target.parentElement.setAttribute('dir', 'rtl');
+        });
+        document.getElementById('toggle-dark-theme').addEventListener('click', function(evt) {
+          document.body.classList.contains('mdc-theme--dark') ? document.body.classList.remove('mdc-theme--dark') : document.body.classList.add('mdc-theme--dark')
+        });
       })();
     </script>
   </body>
