--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -71,6 +71,8 @@ limitations under the License
 
       section + section {
         margin-top: 40px;
+        padding-top: 40px;
+        border-top: 1px solid lightgray;
       }
 
       .panels {
