--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -21,10 +21,6 @@ limitations under the License
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="assets/material-components-web.css.js" charset="utf-8"></script>
     <style>
-      .mdc-typography {
-        margin: 0;
-      }
-
     	.demo-body {
     	  padding: 0;
     	  margin: 0;
@@ -40,10 +36,6 @@ limitations under the License
         padding: 20px;
         margin: 20px;
         background-color: #f2f2f2;
-      }
-
-      .mdc-toolbar__title {
-        padding-left: 0;
       }
 
       .demo-content > button {
@@ -169,11 +161,11 @@ limitations under the License
               <a class="mdc-tab" href="#two">Item Two</a>
               <a class="mdc-tab" href="#three">Item Three</a>
               <a class="mdc-tab" href="#four">Item Four</a>
-                  <a class="mdc-tab" href="#five">Item Five</a>
-                  <a class="mdc-tab" href="#six">Item Six</a>
-                  <a class="mdc-tab" href="#seven">Item Seven</a>
-                  <a class="mdc-tab" href="#eight">Item Eight</a>
-                  <a class="mdc-tab" href="#nine">Item Nine</a>
+              <a class="mdc-tab" href="#five">Item Five</a>
+              <a class="mdc-tab" href="#six">Item Six</a>
+              <a class="mdc-tab" href="#seven">Item Seven</a>
+              <a class="mdc-tab" href="#eight">Item Eight</a>
+              <a class="mdc-tab" href="#nine">Item Nine</a>
               <span class="mdc-tab-bar__indicator"></span>
             </nav>
           </div>
@@ -218,7 +210,7 @@ limitations under the License
       </section>
 
       <section>
-        <h2>Icon & Text Labels</h2>
+        <h2>Icon &amp; Text Labels</h2>
         <nav id="icon-text-tab-bar" class="mdc-tab-bar mdc-tab-bar--icons-with-text">
           <a class="mdc-tab mdc-tab--active" href="#recents">
             <i class="material-icons mdc-tab__icon" aria-hidden="true">phone</i>
@@ -237,7 +229,7 @@ limitations under the License
       </section>
 
       <section>
-        <h2>CSS-Only Icon & Text Labels</h2>
+        <h2>CSS-Only Icon &amp; Text Labels</h2>
         <nav id="icon-text-tab-bar" class="mdc-tab-bar mdc-tab-bar--icons-with-text">
           <a class="mdc-tab mdc-tab--active" href="#recents">
             <i class="material-icons mdc-tab__icon" aria-hidden="true">phone</i>
@@ -489,7 +481,6 @@ limitations under the License
       (function() {
         setTimeout(function () {
           window.basicTabBar = new mdc.tabs.MDCTabBar(document.querySelector('#basic-tab-bar'));
-          window.scrollableTabBar = new mdc.tabs.MDCTabBar(document.querySelector('#scrollable-tab-bar'));
           window.tabBarScroller = new mdc.tabs.MDCTabBarScroller(document.querySelector('#tab-bar-scroller'));
           window.iconTabBar = new mdc.tabs.MDCTabBar(document.querySelector('#icon-tab-bar'));
           window.iconTextTabBar = new mdc.tabs.MDCTabBar(document.querySelector('#icon-text-tab-bar'));
@@ -528,10 +519,9 @@ limitations under the License
             }
           }
 
-          var t = {detail: dynamicTabBar};
-
           dynamicTabBar.root_.addEventListener('MDCTabBar:change', function (t) {
-            var nthChildIndex = t.detail.activeTabIndex;
+            var dynamicTabBar = t.detail;
+            var nthChildIndex = dynamicTabBar.activeTabIndex;
 
             updatePanel(nthChildIndex);
             updateDot(nthChildIndex);
@@ -560,7 +550,7 @@ limitations under the License
           document.getElementById('toggle-rtl').addEventListener('click', function(evt) {
             evt.target.parentElement.hasAttribute('dir') ? evt.target.parentElement.removeAttribute('dir') : evt.target.parentElement.setAttribute('dir', 'rtl');
             window.basicTabBar.layout()
-            window.scrollableTabBar.layout();
+            window.tabBarScroller.tabBar.layout();
             window.iconTabBar.layout();
             window.iconTextTabBar.layout();
             window.toolbarTabBar.layout();
@@ -572,7 +562,7 @@ limitations under the License
             toolbarTabBarModified.layout();
           });
           document.getElementById('toggle-dark-theme').addEventListener('click', function(evt) {
-            document.body.classList.contains('mdc-theme--dark') ? document.body.classList.remove('mdc-theme--dark') : document.body.classList.add('mdc-theme--dark')
+            document.body.classList.contains('mdc-theme--dark') ? document.body.classList.remove('mdc-theme--dark') : document.body.classList.add('mdc-theme--dark');
           });
         })();
       </script>
